<resources>
    <string name="app_name">module_common</string>

    <string name="picker_text_parse">解析数据</string>
    <string name="picker_text_show">显示省市区选择器</string>

    <string name="picker_custom_lunar">时间选择器,自定义</string>
    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>

    <string name="picker_custom_time">时间选择器自定义布局</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>
    <string name="picker_custom_parent">自定义父容器</string>

    <string name="picker_non_linkage">条件选择器(不联动)</string>

    <string name="picker_json_parse_sample">省市区Json文件解析示例</string>

    <string name="otherui_list_empty_warn">暂无记录</string>

    <string name="otherui_pickerview_year">年</string>
    <string name="otherui_pickerview_month">月</string>
    <string name="otherui_pickerview_day">日</string>
    <string name="otherui_pickerview_hour">时</string>
    <string name="otherui_pickerview_minute">分</string>
    <string name="otherui_pickerview_second">秒</string>

    <string name="otherui_common_cancel">取消</string>
    <string name="otherui_common_comfirm">确认</string>
    <string name="otherui_boxing_ok">确定</string>
    <string name="otherui_common_all">全部</string>

</resources>
