<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tome.module_common.activity.PickerViewActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_lunar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_lunar" />

            <Button
                android:id="@+id/btn_Time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:text="@string/picker_time" />

            <Button
                android:id="@+id/btn_Options"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_province" />

            <Button
                android:id="@+id/btn_CustomTime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_time" />

            <Button
                android:id="@+id/btn_CustomOptions"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_province" />

           <!-- <Button
                android:id="@+id/btn_no_linkage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_non_linkage" />-->

            <Button
                android:id="@+id/btn_GotoJsonData"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_json_parse_sample" />

         <!--   <Button
                android:id="@+id/btn_fragment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/tvTime"
                android:layout_margin="10dp"
                android:text="@string/picker_custom_parent" />-->

            <TextView
                android:id="@+id/tv_customer_pick_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableRight="@mipmap/ic_calendar"
                android:textColor="@color/color33"
                android:textSize="15sp"
                tools:text="2017-11-13" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
